# django-custom-error-views

./: .gitignore  MANIFEST.in  README.md  manage.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js  tox.ini
.github/workflows/: ci-cd.yml  lint.yml
django_custom_error_views/: apps.py  views.py
django_custom_error_views/static/django_custom_error_views/: output.css
django_custom_error_views/templates/: 400.html  403.html  404.html  500.html
django_custom_error_views/templates/django_custom_error_views/: base.html
django_errors_ui/: apps.py  views.py
django_errors_ui/static/django_errors_ui/: output.css
django_errors_ui/templates/: 400.html  403.html  404.html  500.html
django_errors_ui/templates/django_errors_ui/: base.html
tests/: settings.py  test_views.py  urls.py
