[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "django-errors-ui"
version = "0.1.0"
description = ""
authors = ["Adin Hodovic <hodovicadin@gmail.com>"]
license = "MIT"
packages = [
    { include = "django_errors_ui" },
]
include = ["django_errors_ui/static/django_errors_ui/output.css"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"

[tool.poetry.group.dev.dependencies]
black = "22.3.0"
isort = "^5.10.1"
pytest = "^7.0.0"
pytest-cov = "2.8.1"
pytest-django = "4.1.0"
mypy = "0.930"
mypy-extensions = "0.4.3"
pylint = "2.15.3"
pylint-django = "2.5.3"
ptipython = "^1.0.1"
ptpython = "2.0.4"
django-extensions = "^3.1.5"
django-browser-reload = "^1.3.0"
pudb = "2019.1"
django-debug-toolbar = "^3.2.4"
Werkzeug = "^2.0.2"
Django = "^4.0.2"
django-click = "^2.3.0"
djlint = "^1.34.0"
