[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "django-custom-error-views"
version = "0.1.0"
authors = ["Adin Hodovic <hodovicadin@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/adinhodovic/django-custom-error-views"
repository = "https://github.com/adinhodovic/django-custom-error-views"
documentation = "https://github.com/adinhodovic/django-custom-error-views"
description = "Prebuilt and customizable error views for Django."
keywords = [
  "Django",
  "Error",
  "HTTP"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 3.2",
  "Framework :: Django :: 4.2",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
django = "^4.2.5"

[tool.poetry.group.dev.dependencies]
black = "22.3.0"
isort = "^5.10.1"
pytest = "^7.4.2"
pytest-cov = "2.8.1"
pytest-django = "^4.5.2"
mypy = "^1.5.1"
mypy-extensions = "^1.0.0"
pylint = "2.15.3"
pylint-django = "2.5.3"
ptipython = "^1.0.1"
ptpython = "2.0.4"
django-extensions = "^3.1.5"
django-browser-reload = "^1.3.0"
pudb = "2019.1"
django-debug-toolbar = "^3.2.4"
Werkzeug = "^2.0.2"
django-click = "^2.3.0"
djlint = "^1.34.0"
django-stubs = "^4.2.4"
tox = "^4.11.3"
pytest-mock = "^3.11.1"
pytest-clarity = "^1.0.1"

[tool.pytest.ini_options]
addopts = "--ds=tests.settings"
python_files = "tests.py test_*.py"
norecursedirs = "node_modules .venv"

[tool.isort]
skip_glob = "**/migrations/*.py,**/fixtures/*.py,infra/**/*.py"
# https://github.com/psf/black/issues/251#issuecomment-535187912
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = ["mypy_django_plugin.main"]
exclude = [".venv","migrations.*"]

[tool.django-stubs]
django_settings_module = "tests.settings"

[tool.pylint.'MASTER']
load-plugins = "pylint_django"
django-settings-module = "tests.settings"

[tool.pylint.'FORMAT']
max-line-length = 120

[tool.pylint.'MESSAGES CONTROL']
disable = "missing-docstring,invalid-name"
